fix hangar button alignment

--- a/style.css
+++ b/style.css
@@ -357,7 +357,7 @@ button {
 #hangar {
     position: absolute;
     margin: 0px auto;
-    left: 38%;
+    left: 48%;
     bottom: 5vh;
 }
 #spaceCoords p {
